--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <div class="section-subtext">Pre-order one of them from 23 November</div>
       <div class="section-subtext">With the unique price of 30$</div>
       <div class="btn-group">
-        <a href="https://www.apple.com/in/iphone-12/" class="button margin-right black w-button">Learn More</a>
-        <a href="https://www.apple.com/in/shop/buy-iphone/iphone-12" target="_blank" class="button black w-button">View product</a>
+        <a href="https://www.apple.com/in/iphone-12/" class="button margin-right w-button">Learn More</a>
+        <a href="https://www.apple.com/in/shop/buy-iphone/iphone-12" target="_blank" class="button w-button">View product</a>
       </div>
     </div>
   </div>
@@ -48,17 +48,17 @@
       <div class="section-subtext">&quot;🍇, double cup, t-shirt&quot;</div>
       <div class="section-subtext">Ordinalo il 28 Novembre</div>
       <div class="btn-group">
-        <a href="https://www.apple.com/homepod-mini/" target="_blank" class="button black w-button">Learn More</a>
+        <a href="https://www.apple.com/homepod-mini/" target="_blank" class="button w-button">Learn More</a>
       </div>
     </div>
   </div>
   <div class="footer">
     <div class="custom_container">
-      <div class="footer-disclaimer">
+      <!-- <div class="footer-disclaimer">
         <div class="text-block">Data plan is required. Gigabit LTE, 4G LTE Advanced, 4G LTE, VoLTE and Wi‑Fi calling are available in selected markets and through selected carriers. Speeds are based on theoretical throughput and vary based on site conditions and carrier. For details on LTE support, contact your carrier and see apple.com/in/iphone/cellular.</div>
         <div class="text-block">Listed pricing is Maximum Retail Price (inclusive of all taxes).</div>
-      </div>
-      <div class="footer_nav">
+      </div> -->
+      <!-- <div class="footer_nav">
         <div class="footer_nav_block">
           <div class="footer_nav_headin">Shop and Learn</div>
           <a href="https://www.apple.com/mac/" target="_blank" class="footer_nav_item w-inline-block">
@@ -198,13 +198,13 @@
             <div class="text-block-2">Contact Apple</div>
           </a>
         </div>
-      </div>
+      </div> -->
       <div class="footer_copyright">
-        <div class="footer-disclaimer copy">
+        <!-- <div class="footer-disclaimer copy">
           <div class="text-block copy">More ways to shop: <a href="https://www.apple.com/retail/" target="_blank" class="link">Find a retailer</a> near you. or Call 000800 040 1966.</div>
-        </div>
+        </div> -->
         <div class="copy_and_legal">
-          <div class="div-block">
+          <!-- <div class="div-block">
             <div class="text-block copy">Copyright 2020 Apple Inc. All rights reserved.</div>
             <div class="footer_copy_menu">
               <a href="https://www.apple.com/legal/privacy/" target="_blank" class="link-block w-inline-block">
@@ -227,7 +227,7 @@
                 <div class="text-block copy">Site Map</div>
               </a>
             </div>
-          </div>
+          </div> -->
           <div class="footer_country">Made by <a href="https://instagram.com/alevikx" target="_blank" class="link-2">@Fede02x</a>
           </div>
         </div>
