--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="section-subtext">With the unique price of 40$</div>
       <div class="section-subtext">Available</div>
       <div class="btn-group">
-        <a href="https://www.apple.com/shop/buy-iphone/iphone-12-pro" target="_blank" class="button w-button">Buy</a>
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=LYL44MWBV9WL6" target="_blank" class="button w-button">Buy</a>
       </div>
     </div>
   </div>
