--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div data-w-id="180aa91e-f9e7-7682-21ff-92a73acf0cea" class="section hero">
     <div class="custom_container sections"><img src="images/BoyScout-Shop-logo.png" loading="lazy" sizes="(max-width: 479px) 100vw, 320px" width="320" srcset="images/BoyScout-Shop-logo-p-500.png 500w, images/BoyScout-Shop-logo-p-800.png 800w, images/BoyScout-Shop-logo.png 1009w" alt="" class="section_header">
       <div class="section_text yellow">The unique place where you <br>can buy drip and <br>accessories</div>
-      <a href="https://www.apple.com/shop/buy-iphone/iphone-12-pro" target="_blank" class="button w-button">Check our profile</a>
+      <a href="https://instagram.com/boyscoutmob" target="_blank" class="button w-button">Check our profile</a>
     </div>
   </div>
   <div data-w-id="3ff967ae-9efc-ae38-fc06-5410d905195a" class="section iphone-12-pro">
@@ -228,7 +228,7 @@
               </a>
             </div>
           </div> -->
-          <div class="footer_country">Made by <a href="https://instagram.com/alevikx" target="_blank" class="link-2">@Fede02x</a>
+          <div class="footer_country">Made by <a href="https://instagram.com/fede02x" target="_blank" class="link-2">@Fede02x</a>
           </div>
         </div>
       </div>
